# solana-parser

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yaml
benches/: parser_bench.rs
debian/: solana-parser.service
src/: arrow.rs  cli.rs  config.rs  lib.rs  logger.rs  main.rs  pump.rs  reader.rs  solana.rs
tf/: main.tf  startup.sh.tftpl
