[package]
name = "solana-parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "solana-parser"
path = "src/main.rs"

[dependencies]
arrow = "56.2.0"
borsh = "1.5.7"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = "0.4.28"
parquet = { version = "56.2.0", features = ["async", "arrow"] }
prost = "0.11.9" # must match solana-storage-proto version
reqwest = { version = "0.12.23", features = ["stream"] }
serde = "1.0.228"
solana-bincode = "3.0.0"
solana-sdk = "3.0.0"
solana-storage-proto = "3.0.6"
solana-transaction-status = "3.0.6"
tokio = { version = "1.47.1", features = ["fs", "full"] }
tokio-util = "0.7.16"
toml = "0.9.8"
yellowstone-faithful-car-parser = "1.0.0"
zstd = "0.13.3"

[patch.crates-io]
yellowstone-faithful-car-parser = { git = 'https://github.com/flanfly/yellowstone-faithful-car-parser.git' }
