[package]
name = "solana-parser"
version = "0.1.0"
edition = "2024"
authors = ["Kai Michaelis <seu@das-labor.org>"]
description = "Reads Solana blockchain data from Old Faithful and extracts pump.fun coin data into Parquet files."
license = "AGPL-3.0-only"

[package.metadata.deb]
depends = ["libssl3t64", "ca-certificates"]
section = "utils"
priority = "optional"
assets = [
    ["target/release/solana-parser", "/usr/bin/", "755"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = true }

[profile.release]
strip = true

[[bin]]
name = "solana-parser"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
borsh = "1.5.7"
clap = { version = "4.5.49", features = ["derive", "env"] }
env_logger = { version = "0.11.8", features = ["kv"] }
futures-util = "0.3.31"
gethostname = "1.1"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = { version = "0.4.28", features = ["kv", "kv_serde", "serde"] }
object_store = { version = "0.12.4", features = ["gcp"] }
parquet = { version = "56.2.0", features = ["async", "arrow"] }
prost = "0.11.9" # must match solana-storage-proto version
reqwest = { version = "0.12.23", features = ["stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
solana-bincode = "3.0.0"
solana-sdk = "3.0.0"
solana-storage-proto = "3.0.6"
solana-transaction-status = "3.0.6"
tokio = { version = "1.47.1", features = ["fs", "full"] }
tokio-util = "0.7.16"
toml = "0.9.8"
url = "2.5.7"
yellowstone-faithful-car-parser = "1.0.0"
zstd = "0.13.3"

[patch.crates-io]
yellowstone-faithful-car-parser = { git = 'https://github.com/flanfly/yellowstone-faithful-car-parser.git' }
